# mimic1

./: .gitignore  .time-stamp  .travis.yml  ACKNOWLEDGEMENTS  COPYING  Exports.def  Makefile  Makefile.am  Makefile.in  NEWS.md  README  README.md  autogen.sh  codecov.yml  configure  configure.ac  configure.in  dependencies.sh  do_gcov.sh  flite.sln  fliteDll.vcproj  gen_ctags.sh  mimic.pc.in  mimic.sln  mimicDll.vcproj  run_testsuite.sh
config/: all.lv  common_make_rules  config.in  default.lv  project.mak
doc/: Makefile  mimic.texi  stuff.ed
flite_notes/: Flite_Dependencies.mm  README.md
iOS/: README_iOS.md  build_mimic_iOS.sh  clean_mimic_iOS.sh
include/: Makefile  config.h.in  cst_alloc.h  cst_args.h  cst_audio.h  cst_cart.h  cst_cg.h  cst_clunits.h  cst_diphone.h  cst_endian.h  cst_error.h  cst_features.h  cst_ffeatures.h  cst_file.h  cst_icu.h  cst_item.h  cst_lexicon.h  cst_lts.h  cst_lts_rewrites.h  cst_phoneset.h  cst_regex.h  cst_relation.h  cst_sigpr.h  cst_socket.h  cst_ss.h  cst_string.h  cst_sts.h  cst_synth.h  cst_tokenstream.h  cst_track.h  cst_units.h  cst_uregex.h  cst_utt_utils.h  cst_utterance.h  cst_val.h  cst_val_const.h  cst_viterbi.h  cst_voice.h  cst_wave.h  flite.h  (+3 more)
lang/cmu_grapheme_lang/: Makefile  cmu_grapheme_lang.c  make_grapheme_phoneset
lang/cmu_grapheme_lex/: Makefile  cmu_grapheme_lex.c  cmu_grapheme_lex.h  grapheme_unitran_tables.c
lang/cmu_indic_lang/: Makefile  cmu_indic_lang.c  cmu_indic_lang.h  cmu_indic_phoneset.c
lang/cmu_indic_lex/: Makefile  cmu_indic_lex.c  cmu_indic_lex.h
lang/cmu_time_awb/: Makefile  cmu_time_awb.c  cmu_time_awb_mcep.c
lang/cmu_us_awb/: Makefile  cmu_us_awb.c  cmu_us_awb_cg.c
lang/cmu_us_kal/: Makefile  cmu_us_kal.c
lang/cmu_us_kal16/: Makefile  cmu_us_kal16.c  cmu_us_kal16_diphone.c
lang/cmu_us_rms/: Makefile  cmu_us_rms.c  cmu_us_rms.vcproj  cmu_us_rms_cg.c
lang/cmu_us_slt/: Makefile  cmu_us_slt.c  cmu_us_slt_cg.c
lang/cmu_us_slt_hts/: cmu_us_slt_hts.c
lang/cmulex/: Makefile  cmu_lex.c  cmu_lex_data_raw.c  cmu_lex_entries.c  cmu_lex_entries_huff_table.c  cmu_lex_num_bytes.c  cmu_lex_phones_huff_table.c  cmu_lts_model.c  cmu_lts_model.h  cmu_lts_rules.c  cmu_postlex.c  libmimic-cmulex.vcproj  make_cmulex  make_cmulex_helper.py  prune_lexicon.py  verify_up_to_lexicon_pruning.py
lang/cstr_upc_upm_spanish_hts/: cstr_upc_upm_spanish_hts.c
lang/es_lang/: es_guess_pos.c  es_init.c  es_intonation.c  es_lang.h  es_lang_internal.h  es_lexical_insertion.c  es_phoneset.c  es_phrasing.c  es_pos_tagger.c  es_text_analysis.c  es_tokenizer.c
lang/usenglish/: Makefile  libmimic-usenglish.vcproj  make_us_regexes  us_aswd.c  us_expand.c  us_ffeatures.c  us_regexes.h  us_text.c  usenglish.c
lang/vid_gb_ap/: Makefile  cmu_us_vocalid.c  cmu_us_vocalid_cg_08_durmodel.c  cmu_us_vocalid_cg_10_durmodel.c  cmu_us_vocalid_cg_10_durmodel.h  cmu_us_vocalid_cg_17_durmodel.c  cmu_us_vocalid_cg_f0_trees.c  cmu_us_vocalid_cg_f0_trees.h  vid_gb_ap.c  vid_gb_ap_cg.c  vid_gb_ap_cg_08_durmodel.c  vid_gb_ap_cg_08_durmodel.h  vid_gb_ap_cg_10_durmodel.c  vid_gb_ap_cg_10_durmodel.h  vid_gb_ap_cg_17_durmodel.c  vid_gb_ap_cg_17_durmodel.h  vid_gb_ap_cg_f0_trees.c  vid_gb_ap_cg_f0_trees.h  vid_gb_ap_cg_phonestate.c  voxdefs.h
main/: Makefile  compile_regexes.c  flite_main.c  flitevox_info_main.c  mimic_lang_list.c  mimic_main.c  mimic_test_voice_load.c  mimic_time_main.c  mimic_voice_list.c  mimicvox_info_main.c  t2p_main.c
man/man1/: mimic.1
snap/: snapcraft.yaml
src/audio/: Makefile  au_alsa.c  au_command.c  au_none.c  au_oss.c  au_palmos.c  au_portaudio.c  au_pulseaudio.c  au_streaming.c  au_sun.c  au_wince.c  auclient.c  audio.c  auserver.c  native_audio.h
src/cg/: Makefile  bb_mlsacore.c  cst_cg.c  cst_cg_dump_voice.c  cst_cg_load_voice.c  cst_cg_map.c  cst_cg_map.h  cst_mlpg.c  cst_mlpg.h  cst_mlsa.c  cst_mlsa.h  cst_spamf0.c  cst_vc.c  cst_vc.h
src/filter/: bb_mlsacore.c
src/hrg/: Makefile  cst_ffeature.c  cst_item.c  cst_rel_io.c  cst_relation.c  cst_utterance.c
src/hts/: flite_hts_engine.c
src/lexicon/: Makefile  cst_lexicon.c  cst_lts.c  cst_lts_rewrites.c
src/regex/: Makefile  cst_regex.c  cst_regex_defs.h  regexp.c  regsub.c
src/speech/: Makefile  cst_lpcres.c  cst_track.c  cst_track_io.c  cst_wave.c  cst_wave_io.c  cst_wave_utils.c  g721.c  g723_24.c  g723_40.c  g72x.c  g72x.h  rateconv.c
src/stats/: Makefile  cst_cart.c  cst_ss.c  cst_viterbi.c
src/synth/: Makefile  cst_ffeatures.c  cst_phoneset.c  cst_ssml.c  cst_synth.c  cst_utt_utils.c  cst_voice.c  flite.c  mimic.c
src/utils/: Makefile  cst_alloc.c  cst_args.c  cst_endian.c  cst_error.c  cst_features.c  cst_file_palmos.c  cst_file_stdio.c  cst_file_wince.c  cst_icu.c  cst_mmap_none.c  (+11 more)
testsuite/: Makefile  asciiS2U_main.c  asciiU2S_main.c  bin2ascii_main.c  by_word_main.c  combine_waves_main.c  compare_wave_main.c  kal_test_main.c  lex_lookup_main.c  lex_test_main.c  lpc_resynth_main.c  lpc_test2_main.c  lpc_test_main.c  multi_thread_main.c  multi_thread_run.sh  play_client_main.c  play_server_main.c  play_sync_main.c  play_wave_main.c  record_in_noise_main.c  record_wave_main.c  rfc_main.c  time_voice_load.c  utt_test_main.c
tools/: LANGNAME_lang.c  LANGNAME_lex.c  Makefile  Makefile.flite  Makefile.lang  Makefile.lex  Makefile.mimic  VOICE_cg.c  VOICE_clunits.c  VOICE_diphone.c  VOICE_ldom.c  build_flite  build_lex  build_mimic  clunit_prune  example.ssml  find_cmimax  huff_table  make_cart.scm  make_cg.scm  make_clunits.scm  make_lang_list  make_lex.scm  make_lts.scm  make_lts_wfst.scm  make_ug.scm  make_voice_list  mimic_sort_main.c  mimic_test  play_sync.scm  setup_mimic
unittests/: Makefile  cutest.h  data_utf8.txt  es_text.txt  es_tokenstream_test_main.c  hrg_test_main.c  lex_test_main.c  lts_test_main.c  nums_test_main.c  regex_test_main.c  run_all_tests  string_test_main.c  token_test_main.c  utt_test_main.c  voice_select_test_main.c  wave_test_main.c
voices/: cmu_us_slt_hts.htsvoice  cstr_upc_upm_spanish_hts.htsvoice
wince/: Makefile  flowm.h  flowm_main.c  flowm_mimic.c
windows/: Makefile  mimicDll.cpp
(+11 files in other folders)
